--- a/index.html
+++ b/index.html
@@ -1,314 +1,2 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>L'Embrasé - Commande & Paiement</title>
-<script src="https://js.stripe.com/v3/"></script>
-<style>
-:root{--p:#ea580c;--a:#dc2626;--d:#1f2937;--success:#00d26a;}
-*{margin:0;padding:0;box-sizing:border-box;}
-body{font-family:system-ui,sans-serif;background:#fff8f5;color:#333;line-height:1.6;}
-.container{max-width:1200px;margin:0 auto;padding:0 1rem;}
-header{background:linear-gradient(135deg,var(--p),var(--a));color:#fff;padding:1.5rem 0;position:sticky;top:0;z-index:100;box-shadow:0 10px 30px rgba(0,0,0,.2);}
-.header-content{display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:1rem;}
-h1{font-size:2.2rem;font-weight:900;}
-.hero{width:100%;height:60vh;object-fit:cover;border-radius:0 0 24px 24px;box-shadow:0 20px 40px rgba(0,0,0,.3);}
-.main{padding:3rem 0;}
-.card{background:#fff;border-radius:20px;padding:2rem;margin-bottom:2rem;box-shadow:0 15px 40px rgba(0,0,0,.1);}
-.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));gap:2rem;}
-.item-card{background:#fff;border-radius:20px;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,.12);transition:.3s;}
-.item-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(0,0,0,.2);}
-.item-img{width:100%;height:210px;object-fit:cover;}
-.btn{width:100%;padding:1rem;border:none;border-radius:14px;background:var(--p);color:#fff;font-weight:700;font-size:1rem;cursor:pointer;transition:.2s;}
-.btn:hover{background:#c2410c;}
-.btn-pay{background:var(--success)!important;font-size:1.2rem;padding:1.2rem;margin-top:1rem;}
-.btn-pay:disabled{background:#aaa;cursor:not-allowed;}
-#card-element{background:#fff;padding:12px;border-radius:12px;border:2px solid #ddd;margin:1rem 0;}
-#payment-status{margin-top:1rem;padding:0.8rem;border-radius:10px;font-weight:700;text-align:center;}
-.success{background:#d4edda;color:#155724;}
-.error{background:#f8d7da;color:#721c24;}
-.icon-btn{background:#fff;color:var(--p);border:none;width:48px;height:48px;border-radius:50%;font-size:1.4rem;cursor:pointer;position:relative;box-shadow:0 6px 15px rgba(0,0,0,.15);}
-.badge{position:absolute;top:-8px;right:-8px;background:var(--a);color:#fff;font-weight:700;font-size:.8rem;min-width:22px;height:22px;border-radius:50%;display:flex;align-items:center;justify-content:center;}
-footer{background:var(--d);color:#fff;text-align:center;padding:2.5rem;margin-top:4rem;}
-@media(max-width:640px){.hero{height:45vh;}h1{font-size:1.8rem;}.grid{grid-template-columns:1fr;}}
-</style>
-</head>
-<body>
-<div id="app"></div>
-<script>
-// ⚠ Mets ici ta clé publique Stripe
-const stripe = Stripe("pk_test_xxxxx");
-const SERVER_URL = "https://lembrase-paiement.vercel.app/api";
-
-const menu={
-  special:[
-    {id:99,name:"Tartiflette au brasero – Plat de la Semaine",price:12,img:"images/tartiflette.jpg"},
-    {id:98,name:"Salade César L'Embrasé",price:12,img:"images/salade-cesar.jpg"}
-  ],
-  entrees:[
-    {id:1,name:"Salade César classique",price:14.90},
-    {id:2,name:"Carpaccio de bœuf",price:16.90},
-    {id:3,name:"Bruschettas mixtes",price:12.90}
-  ],
-  plats:[
-    {id:10,name:"Burger L'Embrasé",price:19.90},
-    {id:11,name:"Tataki de thon",price:24.90},
-    {id:12,name:"Magret de canard",price:23.90}
-  ],
-  desserts:[
-    {id:20,name:"Tiramisu spéculoos",price:8.90},
-    {id:21,name:"Fondant au chocolat",price:9.50}
-  ],
-  boissons:[
-    {id:30,name:"Coca-Cola 33cl",price:4.50},
-    {id:33,name:"Cocktail signature",price:11.00}
-  ]
-};
-
-let cart=JSON.parse(localStorage.getItem("lembrase_cart"))||[];
-let customerInfo={name:"",phone:"",pickupTime:""};
-let view="menu";
-let paymentMode="online";
-let stripeElements=null;
-let cardElement=null;
-
-function saveCart(){localStorage.setItem("lembrase_cart",JSON.stringify(cart));}
-function addToCart(item){const ex=cart.find(i=>i.id===item.id);if(ex)ex.quantity++;else cart.push({...item,quantity:1});saveCart();render();}
-function updateQty(id,delta){const it=cart.find(i=>i.id===id);if(!it)return;it.quantity+=delta;if(it.quantity<=0)cart=cart.filter(i=>i.id!==id);saveCart();render();}
-function totalItems(){return cart.reduce((s,i)=>s+i.quantity,0);}
-function totalPrice(){return cart.reduce((s,i)=>s+i.price*i.quantity,0);}
-function formatPrice(v){return v.toFixed(2).replace(".",",");}
-
-function sendEmailOnline(){
-  const itemsText=cart.map(i=>i.quantity+"x "+i.name).join("%0A");
-  const body=
-   "PAIEMENT ACCEPTÉ 🔥%0A%0A"+
-   "Client: "+customerInfo.name+"%0A"+
-   "Tél: "+customerInfo.phone+"%0A"+
-   "Retrait: "+customerInfo.pickupTime+"%0A%0A"+
-   itemsText+"%0A%0A"+
-   "TOTAL: "+formatPrice(totalPrice())+"€";
-  window.location.href="mailto:sarllinchard@gmail.com?subject=PAIEMENT OK - Commande&body="+body;
-}
-
-function sendEmailOnsite(){
-  const itemsText=cart.map(i=>i.quantity+"x "+i.name).join("%0A");
-  const body=
-   "COMMANDE À RÉGLER SUR PLACE 💶%0A%0A"+
-   "Client: "+customerInfo.name+"%0A"+
-   "Tél: "+customerInfo.phone+"%0A"+
-   "Retrait: "+customerInfo.pickupTime+"%0A%0A"+
-   itemsText+"%0A%0A"+
-   "TOTAL À ENCAISSER: "+formatPrice(totalPrice())+"€";
-  window.location.href="mailto:sarllinchard@gmail.com?subject=Commande à régler sur place&body="+body;
-}
-
-function resetOrder(){
-  cart=[];saveCart();
-  customerInfo={name:"",phone:"",pickupTime:""};
-  paymentMode="online";view="menu";
-  render();
-}
-
-async function payWithStripe(){
-  if(paymentMode!=="online")return;
-  if(!cart.length)return alert("Panier vide !");
-  if(!customerInfo.name||!customerInfo.phone||!customerInfo.pickupTime)
-    return alert("Veuillez remplir vos coordonnées et l'heure de retrait");
-  if(!cardElement){alert("Le formulaire CB n'est pas prêt.");return;}
-
-  const btn=document.getElementById("pay-btn");
-  const status=document.getElementById("payment-status");
-  btn.disabled=true;btn.textContent="Traitement en cours...";status.innerHTML="";
-
-  try{
-    const resp=await fetch(SERVER_URL+"/create-payment-intent",{
-      method:"POST",
-      headers:{"Content-Type":"application/json"},
-      body:JSON.stringify({
-        amount:Math.round(totalPrice()*100),
-        metadata:{
-          customer_name:customerInfo.name,
-          customer_phone:customerInfo.phone,
-          pickup_time:customerInfo.pickupTime,
-          items:JSON.stringify(cart.map(i=>i.quantity+"x "+i.name))
-        }
-      })
-    });
-    if(!resp.ok)throw new Error("Erreur serveur de paiement.");
-    const data=await resp.json();
-    const clientSecret=data.clientSecret;
-    if(!clientSecret)throw new Error("clientSecret manquant.");
-
-    const {error,paymentIntent}=await stripe.confirmCardPayment(clientSecret,{
-      payment_method:{
-        card:cardElement,
-        billing_details:{name:customerInfo.name,phone:customerInfo.phone}
-      }
-    });
-    if(error){
-      status.className="error";status.textContent=error.message;
-      btn.disabled=false;btn.textContent="Payer "+formatPrice(totalPrice())+" € & Confirmer";return;
-    }
-    if(paymentIntent&&paymentIntent.status==="succeeded"){
-      status.className="success";status.textContent="Paiement accepté ✅";
-      alert("Paiement accepté ! 🔥\nVotre commande sera prête à "+customerInfo.pickupTime+".");
-      sendEmailOnline();resetOrder();
-    }
-  }catch(e){
-    status.className="error";status.textContent=e.message;
-    btn.disabled=false;btn.textContent="Payer "+formatPrice(totalPrice())+" € & Confirmer";
-  }
-}
-
-function confirmOnsiteOrder(){
-  if(!cart.length)return alert("Panier vide !");
-  if(!customerInfo.name||!customerInfo.phone||!customerInfo.pickupTime)
-    return alert("Veuillez remplir vos coordonnées et l'heure de retrait");
-  alert("Commande enregistrée ! 🔥\nVous réglerez sur place.\nRetrait à "+customerInfo.pickupTime+".");
-  sendEmailOnsite();resetOrder();
-}
-
-function render(){
-  document.getElementById("app").innerHTML=`
-  <header>
-    <div class="container">
-      <div class="header-content">
-        <div>
-          <h1>L'EMBRASÉ</h1>
-          <p>10 Place Anatole France, 30220 Aigues-Mortes • 04 66 51 24 78</p>
-        </div>
-        <div style="display:flex;gap:1rem;">
-          <button class="icon-btn" onclick="view='cart';render()">
-            🧺 ${totalItems()>0?`<span class='badge'>${totalItems()}</span>`:""}
-          </button>
-          <button class="icon-btn" onclick="view='menu';render()">🏠</button>
-        </div>
-      </div>
-    </div>
-  </header>
-  <img src="images/salle-lembrase.jpg" alt="Salle du restaurant L'Embrasé" class="hero">
-  <div class="main"><div class="container">
-    <div class="card" style="text-align:center;">
-      <h2 style="font-size:2rem;margin-bottom:1rem;">Commande & Paiement</h2>
-      <p>Payez en ligne par carte bancaire ou choisissez le règlement sur place.</p>
-      <p style="margin-top:.5rem;font-size:.95rem;color:#166534;">
-        Après validation, vous pourrez recevoir un SMS de confirmation.
-      </p>
-    </div>
-  `;
-
-  if(view==="menu"){
-    let html=document.getElementById("app").innerHTML;
-    html+=`
-      <h2 style="font-size:2rem;color:var(--p);text-align:center;margin:2rem 0;">Offres de la Semaine – 12€</h2>
-      <div class="grid">
-        ${menu.special.map((sp,idx)=>`
-          <div class="item-card" style="border:4px solid var(--p);position:relative;">
-            <span style="position:absolute;top:10px;left:10px;background:var(--a);color:#fff;padding:.4rem .9rem;border-radius:30px;font-weight:900;">12€</span>
-            <img src="${sp.img}" class="item-img" alt="${sp.name}">
-            <div style="padding:1.2rem;">
-              <h3 style="margin-bottom:.5rem;">${sp.name}</h3>
-              <button class="btn" onclick="addToCart(menu.special[${idx}])">Ajouter 12€</button>
-            </div>
-          </div>
-        `).join("")}
-      </div>
-      <div style="margin-top:3rem;">
-        ${Object.entries(menu).filter(([k])=>k!=="special").map(([cat,items])=>{
-          const titles={entrees:"Entrées",plats:"Plats",desserts:"Desserts",boissons:"Boissons & Cocktails"};
-          return `
-            <h2 style="font-size:1.8rem;color:var(--p);margin:2rem 0 1rem;">${titles[cat]}</h2>
-            <div class="grid">
-              ${items.map((it,i)=>`
-                <div class="item-card">
-                  <div class="item-img" style="background:url('https://source.unsplash.com/random/400x300/?${encodeURIComponent(it.name)}') center/cover;"></div>
-                  <div style="padding:1.2rem;">
-                    <div style="display:flex;justify-content:space-between;align-items:center;">
-                      <div style="font-size:1.1rem;font-weight:700;">${it.name}</div>
-                      <div style="font-size:1.2rem;font-weight:900;color:var(--p);">${formatPrice(it.price)}€</div>
-                    </div>
-                    <button class="btn" style="margin-top:.8rem;" onclick="addToCart(menu['${cat}'][${i}])">Ajouter</button>
-                  </div>
-                </div>
-              `).join("")}
-            </div>
-          `;
-        }).join("")}
-      </div>
-      <footer>
-        <div class="container">
-          <p style="font-size:1.3rem;font-weight:700;">L'EMBRASÉ • Restaurant & Brasero</p>
-          <p>10 Place Anatole France, 30220 Aigues-Mortes • 04 66 51 24 78</p>
-        </div>
-      </footer>
-    `;
-    document.getElementById("app").innerHTML=html;
-  }
-
-  if(view==="cart"){
-    let html=document.getElementById("app").innerHTML;
-    html+=`
-      <div class="card" style="max-width:800px;margin:2rem auto;">
-        <h2>Votre commande – ${formatPrice(totalPrice())} €</h2>
-        ${cart.length===0?`
-          <p style="margin:1.5rem 0;">Votre panier est vide.</p>
-          <button class="btn" onclick="view='menu';render()">⬅ Retour au menu</button>
-        `:`
-          ${cart.map(i=>`
-            <div style="display:flex;justify-content:space-between;align-items:center;padding:1rem 0;border-bottom:1px solid #eee;">
-              <div><strong>${i.quantity}× ${i.name}</strong><br><small>${formatPrice(i.price*i.quantity)}€</small></div>
-              <div style="display:flex;gap:.3rem;">
-                <button class="icon-btn" onclick="updateQty(${i.id},-1)">−</button>
-                <button class="icon-btn" onclick="updateQty(${i.id},1)">+</button>
-              </div>
-            </div>
-          `).join("")}
-          <div style="margin:2rem 0;">
-            <input type="text" placeholder="Nom complet *" style="width:100%;padding:1rem;margin-bottom:1rem;border-radius:12px;border:2px solid #ddd;" oninput="customerInfo.name=this.value" value="${customerInfo.name}">
-            <input type="tel" placeholder="Téléphone (pour SMS) *" style="width:100%;padding:1rem;margin-bottom:1rem;border-radius:12px;border:2px solid #ddd;" oninput="customerInfo.phone=this.value" value="${customerInfo.phone}">
-            <input type="time" placeholder="Heure de retrait *" style="width:100%;padding:1rem;margin-bottom:1.2rem;border-radius:12px;border:2px solid #ddd;" oninput="customerInfo.pickupTime=this.value" value="${customerInfo.pickupTime}">
-            <p style="font-size:.9rem;color:#065f46;margin-bottom:1rem;">Un SMS pourra vous être envoyé pour confirmer votre commande.</p>
-            <div style="margin-bottom:1.2rem;">
-              <p style="font-weight:600;margin-bottom:.5rem;">Mode de paiement</p>
-              <label style="display:flex;align-items:center;gap:.5rem;margin-bottom:.4rem;cursor:pointer;">
-                <input type="radio" name="paymentMode" value="online" ${paymentMode==="online"?"checked":""} onclick="paymentMode='online';render()"> <span>Paiement en ligne par carte (Stripe)</span>
-              </label>
-              <label style="display:flex;align-items:center;gap:.5rem;cursor:pointer;">
-                <input type="radio" name="paymentMode" value="onsite" ${paymentMode==="onsite"?"checked":""} onclick="paymentMode='onsite';render()"> <span>Paiement sur place (espèces / CB)</span>
-              </label>
-            </div>
-            ${paymentMode==="online"?`
-              <div id="card-element"></div>
-              <div id="payment-status"></div>
-              <button id="pay-btn" class="btn btn-pay" onclick="payWithStripe()">Payer ${formatPrice(totalPrice())} € & Confirmer</button>
-              <p style="margin-top:.7rem;font-size:.9rem;color:#374151;">Paiement sécurisé par Stripe. Aucune donnée bancaire n'est stockée par le restaurant.</p>
-            `:`
-              <button class="btn btn-pay" style="background:#f97316;" onclick="confirmOnsiteOrder()">Confirmer la commande à régler sur place</button>
-              <p style="margin-top:.7rem;font-size:.9rem;color:#374151;">Vous réglerez directement au restaurant.</p>
-            `}
-          </div>
-        `}
-      </div>
-      <footer>
-        <div class="container">
-          <p style="font-size:1.3rem;font-weight:700;">L'EMBRASÉ • Restaurant & Brasero</p>
-          <p>10 Place Anatole France, 30220 Aigues-Mortes • 04 66 51 24 78</p>
-        </div>
-      </footer>
-    `;
-    document.getElementById("app").innerHTML=html;
-
-    if(paymentMode==="online"&&cart.length>0){
-      if(!stripeElements)stripeElements=stripe.elements();
-      if(cardElement)cardElement.unmount();
-      cardElement=stripeElements.create("card",{style:{base:{fontSize:"16px"}}});
-      cardElement.mount("#card-element");
-    }
-  }
-}
-render();
-</script>
-</body>
-</html>
+<html><body>Index placeholder</body></html>
